--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "Amigo Corretor",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "pg": "^8.8.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.9"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
