--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon dist/app.js"
+    "start": "nodemon dist/app.js",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "keywords": [],
   "author": "Amigo Corretor",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
@@ -19,6 +21,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.13",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1"
   }
 }
