--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Amigo Corretor",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "pg": "^8.8.0",
@@ -19,6 +20,7 @@
     "typeorm": "^0.3.9"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.13",
     "nodemon": "^2.0.19",
