--- a/CHANGE.env
+++ b/CHANGE.env
@@ -1,4 +1,7 @@
 # change this file's name to .env
+DB_HOST="localhost"
+DB_USERNAME="postgres"
 PG_PASSWORD="ADD PG PASSWORD HERE"
 DB_PORT="5432"
+DB_DATABASE="AmigoCorretor"
 JWT_KEY="ADD SECRET PHRASE HERE"
