--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon dist/app.js",
+    "production": "node dist/app.js",
+    "postinstall": "tsc",
     "typeorm": "typeorm-ts-node-commonjs"
   },
   "keywords": [],
