--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon dist/app.js",
-    "production": "node dist/app.js",
+    "start": "node dist/app.js",
     "postinstall": "tsc",
     "typeorm": "typeorm-ts-node-commonjs"
   },
